<resources>
    <string name="app_name">Chanjo-Ke</string>
    <string name="app_name1">OpenCHANJO</string>
    <string name="vaccineList">vaccineList</string>
    <string name="campaigns">Campaigns</string>
    <string name="referralData">ReferralData</string>
    <string name="base_url">https://immunization.health.go.ke/auth/</string>
<!--    <string name="base_url">https://openchanjotest.intellisoftkenya.com/auth/</string>-->

    <string name="add_patient">Register Client</string>
    <string name="fab_content_desc">Register Client</string>
    <string name="administer_vaccine_count">Administer Vaccine </string>

    <string name="all_details"><u>All Details</u></string>
    <string name="appointment"><u>Appointment</u></string>
    <string name="administer_vaccine_text">Administer (0)</string>


    <string name="title_patient_list">Registered Clients</string>
    <string name="syncing">Syncing</string>
    <string name="sync">Sync</string>
    <string name="query_hint_patient_search">Enter Client Name / ID</string>
    <string name="description_status">Status</string>

    <string name="title_activity_patient_detail">PatientDetailActivity</string>
    <string name="tab_text_1">Under 5 years</string>
    <string name="tab_text_2">Above 5 years</string>
    <string name="tab_text_4">Appointments</string>
    <string name="tab_text_5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="none">Unknown</string>
    <string name="message_no_datetime">None</string>
    <string name="cancel_questionnaire_message">Are you sure you want to cancel?</string>
    <string name="inputs_missing">Input missing</string>
    <string name="resources_saved">Details Updated</string>
    <string name="add_care_giver">Add Care Giver</string>
    <string name="message_patient_updated">Client details updated</string>
    <string name="edit_patient">Edit Client</string>
    <string name="tab_text_3">Client Details</string>
    <string name="register_client">Register Client</string>
    <string name="doses_administered">Doses Administered</string>
    <string name="type_of_aefi">Type of AEFI</string>
    <string name="brief_details_on_aefi">Brief details on AEFI</string>
    <string name="onset_of_event">Onset of Event:</string>
    <string name="past_medical_history">Past Medical History:</string>
    <string name="reaction_severity">Reaction Severity:</string>
    <string name="action_taken">Action Taken:</string>
    <string name="aefi_outcome">AEFI Outcome:</string>
    <string name="adverse_event">Adverse Event Following Immunization</string>
    <string name="action_aefi">AEFI</string>
    <string name="home">Home</string>
    <string name="clients">Clients</string>
    <string name="vaccines">Vaccines</string>
    <string name="profile">Profile</string>
    <string name="add_vaccine">Add Vaccine</string>
    <string name="administer_vaccine">Administer Vaccine</string>
    <string name="info">Info</string>
    <string name="this_is_the_information_field">Select record to update</string>
    <string name="name_of_person_reporting">Name of Person Reporting:</string>
    <string name="contact">Contact:</string>
    <string name="healthcare_worker">Healthcare Worker:</string>
    <string name="date_reported">Date Reported:</string>
    <string name="facility">Facility:</string>
    <string name="success">Success</string>
    <string name="healthcare_worker_designation">Designation</string>
    <string name="checkbox">Please click on the check box to select the vaccine to administer</string>
    <string name="at_birth">At Birth</string>
    <string name="previous_aefi">Previous AEFI</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="weeks">Week</string>
    <string name="months">Month</string>
    <string name="years">Year</string>
    <string name="caregiver_details">Caregiver Details</string>
    <string name="add">Add</string>
    <string name="administrative_area">Administrative Area</string>
    <string name="client_info">Client Details</string>
    <string name="next_of_kin_details">Next of Kin Details</string>
    <string name="edit_client_detail">Edit Client Detail</string>
    <string name="contraindications">Contraindications</string>
    <string name="next_vaccination_date">Next Vaccination Date</string>
    <string name="specimen_collected">Specimen Collected</string>
    <string name="preview">Preview</string>
    <string name="remove_caregiver">Remove Caregiver</string>
    <string name="remove_caregiver_confirmation">Are you sure you want to remove Caregiver?</string>
    <string name="reset_password">Reset Password</string>
    <string name="id_number">Id Number *</string>
    <string name="email_address">Email Address *</string>
    <string name="enter_email_address_and_id_number">Enter Email Address and Id Number</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="update_password">Update Password</string>
    <string name="reset_code">Reset code</string>
    <string name="estimated_dob">Estimated DoB</string>
    <string name="referral_details">Referral Details</string>
    <string name="back">Back</string>
    <string name="administer">Administer</string>
    <string name="update_vaccine_history">Update Vaccine History</string>
    <string name="no_referral_record_found">No Referral record found!</string>
    <string name="client_details">Client Details</string>
    <string name="appointments">Appointments</string>
    <string name="referrals">Referrals</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="next_vaccine_appointment">Next Vaccine Appointment</string>
    <string name="start">Start</string>
    <string name="search_campaign">Search Campaign</string>
    <string name="over_5_years">Above 5 years</string>
    <string name="under_5_years">Under 5 years</string>
    <string name="document_identification_type">Document Identification Type *</string>
    <string name="document_identification_number">Document Identification Number *</string>
    <string name="next_of_kin">Next of Kin</string>


</resources>