<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_client_details"
        android:orderInCategory="100"
        android:title="@string/client_details"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_appointments"
        android:orderInCategory="100"
        android:title="@string/appointments"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_referrals"
        android:orderInCategory="100"
        android:title="@string/referrals"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_update_vaccine"
        android:orderInCategory="100"
        android:title="@string/update_vaccine_history"
        android:visible="true"
        app:showAsAction="never" />

</menu>
